The initial commit with the empty template
