# api/Entities/Doctrine/Manual/vitals.php
@@ -1,0 +1,48 @@
+<?php
+
+// api/Entities/Doctrine/Primary/vitals.php
+
+namespace Api\Entities\Doctrine\Primary;
+
+use Doctrine\ORM\Mapping as ORM;
+
+/**
+ * @ORM\Entity @ORM\Table(name="vitals")
+ **/
+class vitals
+{
+    /**
+     * @ORM\Id
+     * @ORM\Column(type="integer")
+     */
+    protected $id;
+     /**
+     * @ORM\Column(type="float")
+     */
+    protected $bloodpressure;
+     /**
+     * @ORM\Column(type="float")
+     */
+    protected $o2;
+     /**
+     * @ORM\Column(type="float")
+     */
+    protected $heartrate;
+     /**
+     * @ORM\Column(type="float")
+     */
+    protected $temperature;
+     /**
+     * @ORM\Column(type="float")
+     */
+    protected $bloodsugar;
+    /**
+     * @ORM\ManyToOne(targetEntity="patient",inversedBy="vitals")
+     **/
+    protected $patient;
+    /**
+     * @ORM\Column(type="string")
+     */
+    protected $date;
+
+}
